[package]
name = "spelltower"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argmin = { version = "0.10", features = ["ctrlc"] }
clap = { version = "4", features = ["derive"] }
env_logger = { version = "0.11", features = ["unstable-kv"] }
log = { version = "0.4", features = ["kv"] }
ndarray = "0.15"
num-traits = "0.2"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
